<resources>
    <string name="app_name">RentalCarManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RentalCarManager</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="draw_car">Cars</string>
    <string name="draw_branch">Branches</string>
    <string name="draw_customer">Customers</string>
    <string name="draw_rental">Rentals</string>
    <string name="draw_queries">Queries</string>
    <string name="draw_home">Home</string>


    <string name="room_button">Room Queries</string>
    <string name="search_button">Search</string>
    <string name="firebase_button">Firebase Queries</string>

    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>

    <string name="insert_car">Insert Car</string>
    <string name="insert_branch">Insert Branch</string>
    <string name="insert_rental">Insert Rental</string>
    <string name="insert_customer">Insert Customer</string>


</resources>