<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/draw_home" />
        <item
            android:id="@+id/nav_cars"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/draw_car" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_menu_customers"
            android:title="@string/draw_customer" />
        <item
            android:id="@+id/nav_rentals"
            android:icon="@drawable/ic_menu__car_rental"
            android:title="@string/draw_rental" />
        <item
            android:id="@+id/nav_branches"
            android:icon="@drawable/ic_menu_branches"
            android:title="@string/draw_branch"/>
        <item
            android:id="@+id/nav_queries"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/draw_queries" />

    </group>
</menu>