<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rentalcarmanager.ui.home.HomeFragment"
        android:label="@string/draw_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_cars"
        android:name="com.example.rentalcarmanager.ui.cars.CarsFragment"
        android:label="Cars"
        tools:layout="@layout/fragment_cars" />

    <fragment
        android:id="@+id/nav_customers"
        android:name="com.example.rentalcarmanager.ui.customers.CustomersFragment"
        android:label="@string/draw_customer"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/nav_rentals"
        android:name="com.example.rentalcarmanager.ui.rentals.RentalsFragment"
        android:label="@string/draw_rental"
        tools:layout="@layout/fragment_rentals" />
    <fragment
        android:id="@+id/nav_branches"
        android:name="com.example.rentalcarmanager.ui.branches.BranchesFragment"
        android:label="@string/draw_branch"
        tools:layout="@layout/fragment_branches" />

    <fragment
        android:id="@+id/nav_queries"
        android:name="com.example.rentalcarmanager.ui.query.QueryFragment"
        android:label="@string/draw_queries"
        tools:layout="@layout/fragment_query" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.rentalcarmanager.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />


</navigation>